alignment fixes in main card and connect wallet modal

--- a/src/component/UI/modal/dexModel.scss
+++ b/src/component/UI/modal/dexModel.scss
@@ -10,7 +10,7 @@
 .modal-content {
   position: absolute;
   background-color: #fff;
-  border-radius: 5px;
+  border-radius: 15px;
 }
 
 .custom-search {
